--- a/package.json
+++ b/package.json
@@ -9,11 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.2.6",
+    "antd": "^5.8.5",
     "autoprefixer": "10.4.15",
+    "axios": "^1.5.0",
+    "mongodb": "^6.0.0",
+    "mongoose": "^7.5.0",
     "next": "13.4.19",
+    "next-auth": "^4.23.1",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "supports-color": "^8.1.1",
     "tailwindcss": "3.3.3"
+  },
+  "devDependencies": {
+    "@types/react": "18.2.21",
+    "typescript": "5.2.2"
   }
 }
