--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-intersection-observer": "^9.5.2",
+    "react-select": "^5.7.4",
     "supports-color": "^8.1.1",
     "tailwindcss": "3.3.3"
   },
