--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "18.2.0",
     "react-intersection-observer": "^9.5.2",
     "react-select": "^5.7.4",
+    "sharp": "^0.32.6",
     "supports-color": "^8.1.1",
     "tailwindcss": "3.3.3"
   },
