--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-intersection-observer": "^9.5.2",
     "react-select": "^5.7.4",
     "sharp": "^0.32.6",
+    "sonner": "^1.0.3",
     "supports-color": "^8.1.1",
     "tailwindcss": "3.3.3"
   },
