--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "antd": "^5.8.5",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
+    "framer-motion": "^10.16.5",
     "mongodb": "^6.0.0",
     "mongoose": "^7.5.0",
     "next": "13.4.19",
